kustomize/overlays/scots-lab/apps/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      priorityClassName: homelab-data
      containers:
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:v2.9.3
          ports:
            - containerPort: 3000
              name: http
          volumeMounts:
            - name: data
              mountPath: /data/data
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi

        - name: postgres
          image: postgres:16-bookworm
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 10m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkwarden-data
        - name: postgres-data
          persistentVolumeClaim:
            claimName: linkwarden-postgres-data
